Support URIs rather than URLs to support rtsp-urls